--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "commonjs",
   "scripts": {
     "test": "jest"
   },
@@ -21,6 +21,6 @@
     "jest": "^29.2.1"
   },
   "dependencies": {
-    "inquirer": "^9.1.4"
+    "inquirer": "^8.2.5"
   }
 }
